testsuite/tests/properties/can_reach/invalid/no_argument/test.lkt
import common

@abstract class FooNode implements Node[FooNode] {
    fun can_reach(): Bool = true
}
